# Jackal

./: LICENSE  README.md  main.cpp  meson.build
include/jackal/: core.h  forcegen.h  particle.h
src/jackal/: core.cpp  forcegen.cpp  particle.cpp
